--- a/argopush/spring.yaml
+++ b/argopush/spring.yaml
@@ -15,6 +15,9 @@ spec:
       containers:
       - name: config-demo
         image: ghcr.io/gazami99/spring:latest
+      imagePullSecrets:
+      - name: regcred
+      
         env:      
         - name: DB_HOSTNAME
           valueFrom:
