--- a/argopush/route.yaml
+++ b/argopush/route.yaml
@@ -7,7 +7,8 @@ spec:
   parentRefs:
   - name: istio-gateway
     namespace: istio-gateway
-  hostnames: "*"
+  hostnames:
+  - "*"
   rules:
   - matches:
     - path:
