--- a/argopush/route.yaml
+++ b/argopush/route.yaml
@@ -1,8 +1,8 @@
 apiVersion: gateway.networking.k8s.io/v1beta1
 kind: HTTPRoute
 metadata:
-  name: http-monitoring
-  namespace: monitoring
+  name: http-gongo
+  namespace: gongo
 spec:
   parentRefs:
   - name: istio-gateway
