--- a/argopush/serviceMonitor.yaml
+++ b/argopush/serviceMonitor.yaml
@@ -1,12 +1,12 @@
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
-  name: example-app
+  name: example
   namespace: gongo
 spec:
   selector:
     matchLabels:
-      app: example-app
+      app: spring
   endpoints:
   - port: http-spring
   namespaceSelector:
